<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        tools:ignore="UselessParent" >

        <View
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:background="@drawable/background_half_pink"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="65dp">

            <!-- First Row of Buttons -->
            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHard1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    android:text=""
                    app:backgroundTint="@null"
                    android:contentDescription="@string/btn_hard1" />

                <Button
                    android:id="@+id/btnHard2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    android:text=""
                    app:backgroundTint="@null"
                    android:contentDescription="@string/btn_hard2"/>

                <Button
                    android:id="@+id/btnHard3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    android:text=""
                    app:backgroundTint="@null"
                    android:contentDescription="@string/btn_hard3"/>
            </LinearLayout>

            <!-- Second Row of Buttons -->
            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHard4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    android:text=""
                    app:backgroundTint="@null"
                    android:contentDescription="@string/btn_hard4"/>

                <Button
                    android:id="@+id/btnHard5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    android:text=""
                    app:backgroundTint="@null"
                    android:contentDescription="@string/btn_hard5"/>

                <Button
                    android:id="@+id/btnHard6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    android:text=""
                    app:backgroundTint="@null"
                    android:contentDescription="@string/btn_hard6"/>
            </LinearLayout>

            <!-- Third Row of Buttons -->
            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHard7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    app:backgroundTint="@null"
                    android:text=""
                    android:contentDescription="@string/btn_hard7"/>

                <Button
                    android:id="@+id/btnHard8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    app:backgroundTint="@null"
                    android:text=""
                    android:contentDescription="@string/btn_hard8"/>

                <Button
                    android:id="@+id/btnHard9"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    app:backgroundTint="@null"
                    android:text=""
                    android:contentDescription="@string/btn_hard9"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
