<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        tools:ignore="UselessParent">

    <View
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@drawable/background_half_yellow"
        android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="65dp">

            <!-- First Row of Buttons -->
            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNormal1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    app:backgroundTint="@null"
                    android:text=""
                    android:contentDescription="@string/btn_normal1"/>

                <Button
                    android:id="@+id/btnNormal2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    app:backgroundTint="@null"
                    android:text=""
                    android:contentDescription="@string/btn_normal2"/>

                <Button
                    android:id="@+id/btnNormal3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    app:backgroundTint="@null"
                    android:text=""
                    android:contentDescription="@string/btn_normal3"/>
            </LinearLayout>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNormal4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    app:backgroundTint="@null"
                    android:text=""
                    android:contentDescription="@string/btn_normal4"/>

                <Button
                    android:id="@+id/btnNormal5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    app:backgroundTint="@null"
                    android:text=""
                    android:contentDescription="@string/btn_normal5"/>

                <Button
                    android:id="@+id/btnNormal6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/square_white_round"
                    app:backgroundTint="@null"
                    android:text=""
                    android:contentDescription="@string/btn_normal6"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>
