<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnRecipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">

    <!-- ปุ่ม Back -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="top"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/button_back"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textWithRoundedBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/header_aqua"
        android:fontFamily="@font/nunito_black"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingTop="20dp"
        android:paddingRight="40dp"
        android:paddingBottom="20dp"
        android:text="@string/b_recipe"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_half_pink"
        android:orientation="horizontal"
        android:scaleType="centerCrop"
        android:gravity="center">

        <Button
            android:id="@+id/btnNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_black"
            android:background="@drawable/button_level"
            app:backgroundTint="@null"
            tools:ignore="TextContrastCheck,ButtonStyle" />

        <Button
            android:id="@+id/btnHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_black"
            android:background="@drawable/button_level_select"
            app:backgroundTint="@null"
            tools:ignore="TextContrastCheck,ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_pink"
        android:gravity="center|center_vertical"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp" />
    </LinearLayout>

</LinearLayout>